--- a/ovtlyr/css/style.css
+++ b/ovtlyr/css/style.css
@@ -401,6 +401,29 @@ a {
 }
 }
 /*============== LOADER CSS END =============*/
+/*======= LOAD MORE BUTTON CSS START ========*/
+.fold_moreBtn {
+  color: #4285F4;
+  margin-top: 10px;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 25px;
+  font-family: 'DMSans-Regular';
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+.fold_moreBtn:hover, .fold_moreBtn:focus {
+  color: #4285F4;
+}
+.fold_moreBtn i {
+  font-size: 18px;
+  vertical-align: middle;
+  margin-left: 8px;
+}
+.fold_moreBtn i.loader_icon {
+  font-size: 18px;
+}
+/*======== LOAD MORE BUTTON CSS END ========*/
 /*============== APP CSS START ==============*/
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
@@ -10205,28 +10228,29 @@ i.fa-solid.fa-star {
 }
 .noti_box {
   position: absolute;
-  top: -8px;
+  top: -10px;
   right: -8px;
-  border: 1px solid #FF8F07;
+  /* border: 1px solid #FF8F07;
   width: 20px;
   height: 20px;
   display: flex;
   border-radius: 10px;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
-.noti_box .noti_count {
-  width: 14px;
-  height: 14px;
-  border-radius: 10px;
+.noti_count {
+  width: 22px;
+  height: 22px;
+  border-radius: 24px;
   display: flex;
   font-family: 'DMSans-Medium';
-  font-size: 12px;
+  font-size: 11px;
   line-height: 18px;
+  color: #ffffff;
   background-color: #FF8F07;
-  border: 2px solid #ff000000;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 2px 10px rgb(0 0 0 / 8%);
 }
 .stocksTab_table {
   width: 100%;
@@ -11233,19 +11257,19 @@ show-mob {
   justify-content: space-between;
   margin-bottom: 20px;
 }
-.settings_head31 h6 {
+/* .settings_head31 h6 {
   font-family: 'DMSans-Bold';
   font-size: 20px;
   line-height: 28px;
   color: #2A353D;
   margin-bottom: 0;
-}
+} */
 .settings_head31 p {
   font-family: 'DMSans-Regular';
   font-size: 16px;
   line-height: 22px;
   color: #2A353D;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   margin-bottom: 0;
 }
 .notifiBoxes {
@@ -11295,6 +11319,9 @@ show-mob {
   color: #2A353D;
   margin: 0;
 }
+.notiLog__table {
+  min-width: 650px;
+} 
 .ovtlyr_table.notiLog__table th, .ovtlyr_table.notiLog__table td {
   height: 50px;
   padding: 10px;
@@ -12871,8 +12898,12 @@ body.dark .referral_sec22 ul li {
 body.dark .referral_sec22 ul li img {
   filter: brightness(100);
 }
+body.dark .coupon_div input {
+  border-color: #4d4d4d;
+  color: #ffffff;
+}
 /*=========== DARK THEME CSS END ===========*/
-/*=========== MEDIA QUERY START ===========*/
+/*============ MEDIA QUERY START ===========*/
 @media only screen and (max-width: 1920px) {
 .lock_data {
   height: 440px;
@@ -14510,6 +14541,15 @@ body.dark .referral_sec22 ul li img {
   line-height: 28px;
 }
 .pageNot_Found2 p {
+  font-size: 16px;
+}
+.watchlist_tabs > ul {
+  gap: 12px;
+}
+.watchlist_tabs > ul > li {
+  width: calc(33.33% - 8px);
+}
+.watchlist_tabs > .nav-tabs .nav-link {
   font-size: 16px;
 }
 }
