--- a/ovtlyr/css/free-trial.css
+++ b/ovtlyr/css/free-trial.css
@@ -65,69 +65,66 @@ section {
     width: 100%;
     clear: both;
 }
-/*========= CHECKBOX CSS =========*/
-.checkbox {
+/*======== COMMON CSS START ========*/
+.account_fields {
+    width: 100%;
+    text-align: left;
+    margin-top: 10px;
+}
+.account_fields .form_field {
+    width: 100%;
     display: inline-block;
+    margin-bottom: 20px;
     position: relative;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: pointer;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.checkbox__input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-}
-.checkbox__in {
-    display: flex;
-}
-.checkbox__tick {
-    position: relative;
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
-    width: 20px;
-    height: 20px;
-    border-radius: 4px;
-    border: 2px solid #E1E1E1;
-    -webkit-transition: all .25s;
-    -o-transition: all .25s;
-    transition: all .25s;
-}
-.checkbox__tick:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 10px;
-    height: 10px;
-    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='10' fill='none' viewBox='0 0 14 10'%3E%3Cpath fill-rule='evenodd' d='M13.707.293a1 1 0 0 1 0 1.414l-8 8a1 1 0 0 1-1.414 0l-4-4a1 1 0 1 1 1.414-1.414L5 7.586 12.293.293a1 1 0 0 1 1.414 0z' fill='%23fcfcfd'/%3E%3C/svg%3E") no-repeat 50% 50%/100% auto;
-    opacity: 0;
-    transition: opacity .2s;
-}
-.checkbox__input:checked + .checkbox__in .checkbox__tick:before {
-    opacity: 1;
-}
-.checkbox__input:checked + .checkbox__in .checkbox__tick {
-    background: #4285f4;
-    border-color: #4285f4;
-}
-.checkbox__text {
-    font-family: 'Poppins-Regular';
-    font-size: 14px;
+.form_field label {
+    font-family: 'DMSans-Bold';
+    font-size: 15px;
     line-height: 20px;
-    margin-left: 10px;
-    color: #4285f4;
-    -webkit-transition: color .2s;
-    -o-transition: color .2s;
-    transition: color .2s;
+    color: #242947;
+    margin-bottom: 10px;
 }
-/*========= CHECKBOX CSS END =========*/
+.form_field input {
+    background-color: transparent;
+    padding: 14px 20px;
+    border-radius: 5px;
+    border: 1px solid #E6E9F5;
+    font-family: 'DMSans-Regular';
+    font-size: 17px;
+    line-height: 21px;
+    color: #242947;
+    width: 100%;
+    margin-bottom: 0;
+}
+.login_buttons {
+    width: 100%;
+    margin-top: 20px;
+}
+.login_buttons button {
+    font-family: 'DMSans-Medium';
+    font-size: 18px;
+    line-height: 24px;
+    color: #ffffff;
+    background-color: #4285f4;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    border-radius: 5px;
+    padding: 12px;
+}
+.footer_p {
+    font-family: 'DMSans-Regular';
+    font-size: 18px;
+    line-height: 24px;
+    color: #242947;
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+.footer_p a {
+    color: #4285f4;
+}
+/*========== COMMON CSS END ==========*/
+
 /*=========== START SIGN UP ==========*/
 /*===== TABS =====*/
 .steps_head {
@@ -197,63 +194,6 @@ section {
     line-height: 24px;
     color: #242947;
     margin-bottom: 0;
-}
-.account_fields {
-    width: 100%;
-    text-align: left;
-    margin-top: 10px;
-}
-.account_fields .form_field {
-    width: 100%;
-    display: inline-block;
-    margin-bottom: 20px;
-    position: relative;
-}
-.form_field label {
-    font-family: 'DMSans-Bold';
-    font-size: 15px;
-    line-height: 20px;
-    color: #242947;
-    margin-bottom: 10px;
-}
-.form_field input {
-    background-color: transparent;
-    padding: 14px 20px;
-    border-radius: 5px;
-    border: 1px solid #E6E9F5;
-    font-family: 'DMSans-Regular';
-    font-size: 17px;
-    line-height: 21px;
-    color: #242947;
-    width: 100%;
-    margin-bottom: 0;
-}
-.login_buttons {
-    width: 100%;
-    margin-top: 30px;
-}
-.login_buttons button {
-    font-family: 'DMSans-Medium';
-    font-size: 18px;
-    line-height: 24px;
-    color: #ffffff;
-    background-color: #4285f4;
-    width: 100%;
-    display: inline-block;
-    text-align: center;
-    border-radius: 5px;
-    padding: 12px;
-}
-.footer_p {
-    font-family: 'DMSans-Regular';
-    font-size: 18px;
-    line-height: 24px;
-    color: #242947;
-    margin-top: 20px;
-    margin-bottom: 0;
-}
-.footer_p a {
-    color: #4285f4;
 }
 .tForm_sec12 {
     width: calc(40% - 20px);
@@ -601,3 +541,58 @@ section {
     line-height: 22px;
     color: #4285f4;
 }
+/*======== CHOOSE PLAN END ========*/
+
+/*======= LANDING PAGE START ======*/
+.landing_bg {
+    background-image: linear-gradient( 322deg, #ffffff 20%,#F1F6FF 54%, #d6e4fb 100%);
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    display: table;
+    padding: 40px;
+}
+.landing_inner {
+    display: table-cell;
+    vertical-align: middle;
+}
+.landing_box {
+    max-width: 620px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0 4px 20px #00000012;
+    padding: 50px;
+}
+.landing_head {
+    width: 100%;
+    margin-bottom: 40px;
+}
+.landing_head > div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 30px;
+    font-family: 'DMSans-Medium';
+    font-size: 20px;
+    line-height: 24px;
+    color: #242947;
+}
+.landing_head h3 {
+    font-family: 'DMSans-Regular';
+    font-size: 36px;
+    line-height: 24px;
+    color: #242947;
+    margin-bottom: 0;
+}
+.landing_head p {
+    font-family: 'DMSans-Regular';
+    font-size: 18px;
+    line-height: 24px;
+    color: #242947;
+    margin-top: 25px;
+    margin-bottom: 0;
+}
+/*======== LANDING PAGE END =======*/
