--- a/ovtlyr/css/free-trial.css
+++ b/ovtlyr/css/free-trial.css
@@ -124,8 +124,6 @@ section {
     color: #4285f4;
 }
 /*========== COMMON CSS END ==========*/
-
-/*=========== START SIGN UP ==========*/
 /*===== TABS =====*/
 .steps_head {
     width: 100%;
@@ -150,6 +148,7 @@ section {
     color: #4285F4;
 }
 /*===== TABS =====*/
+/*===== START SIGN UP =====*/
 .trialForm_bg {
     width: 100%;
     background-image: linear-gradient( 322deg, #ffffff 20%,#F1F6FF 54%, #d6e4fb 100%);
@@ -364,8 +363,8 @@ section {
     color: #4285f4;
     text-decoration: underline !important;
 }
-/*========== END SIGN UP ==========*/
-/*======= CHOOSE PLAN START =======*/
+/*====== END SIGN UP ======*/
+/*=== CHOOSE PLAN START ===*/
 .pricingNew1 {
     width: 100%;
     text-align: center;
@@ -542,57 +541,3 @@ section {
     color: #4285f4;
 }
 /*======== CHOOSE PLAN END ========*/
-
-/*======= LANDING PAGE START ======*/
-.landing_bg {
-    background-image: linear-gradient( 322deg, #ffffff 20%,#F1F6FF 54%, #d6e4fb 100%);
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    display: table;
-    padding: 40px;
-}
-.landing_inner {
-    display: table-cell;
-    vertical-align: middle;
-}
-.landing_box {
-    max-width: 620px;
-    margin: 0 auto;
-    text-align: center;
-    background-color: #ffffff;
-    border-radius: 15px;
-    box-shadow: 0 4px 20px #00000012;
-    padding: 50px;
-}
-.landing_head {
-    width: 100%;
-    margin-bottom: 40px;
-}
-.landing_head > div {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 30px;
-    font-family: 'DMSans-Medium';
-    font-size: 20px;
-    line-height: 24px;
-    color: #242947;
-}
-.landing_head h3 {
-    font-family: 'DMSans-Regular';
-    font-size: 36px;
-    line-height: 24px;
-    color: #242947;
-    margin-bottom: 0;
-}
-.landing_head p {
-    font-family: 'DMSans-Regular';
-    font-size: 18px;
-    line-height: 24px;
-    color: #242947;
-    margin-top: 25px;
-    margin-bottom: 0;
-}
-/*======== LANDING PAGE END =======*/
